*********************
*                   *
*  1.9 SERIES NEWS  *
*                   *
*********************


CHANGES IN R (AQUA) VERSION 1.9.0



NEW FEATURES
    o   Dragging a file on the R icon, causes R to source the
        file. At the moment there is no control over the file
        type.

    o   The user can select a startup working directory in the 
        Preferences using the Misc tab.

    o   The current working directory is now displayed on top of
        R Console window bar.

    o   The refresh of the aqua console is now faster than before an 
        buffering of R output is enabled by default even if the user 
        can't set it. The preferences panel no longer contains the 
        entries for setting the amount of the buffer size and the 
        checkbox for enabling/disablig this option.

    o   Dy default, the Aqua console now opens to the left-top of the
        screen unless differently set in the preferences file of the 
        R.app. The last position of Console and its size are now saved 
        in the preferences file when R quits and reused at R statup  
        by default. The user can disable this functionality using the 
        checkbox in the Text Windows pane of preferences window.

    o   By default, the quartz device now opens to the top-right 
        position on the screen. The user can override this setting 
        choosing among five different solutions in the quartz device 
        tab in the preferences window.

    o   Console font: now the user can only choose among 5 different 
        fixed width fonts. Fonts size and Tab size can now be choosen
        using the appropriate popup menu buttons in the preference 
        window.

    o   Edit and Help windows now opens at the right top position on 
        the screen. They are also 80 chars-width sized to contain by 
        default R man pages.

    o   Resizing of the R Console Window changes the "width" option by